--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <p>Share Test fix2</p>
     <p>Share Test fix3</p>
     <p>Share Test fix4</p>
+    <p>Share Test fix4</p>
 </body>
 
 </html>
