--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <p>Share Test fix3</p>
     <p>Share Test fix4</p>
     <p>Share Test fix4</p>
+    <p>Share Test fix4</p>
 </body>
 
 </html>
