--- a/index.html
+++ b/index.html
@@ -16,43 +16,9 @@
 </head>
 
 <body>
-    <p>Share Test</p>
-    <p>Share Test fix</p>
-    <p>Share Test fix2</p>
-    <p>Share Test fix3</p>
-    <p>Share Test fix4</p>
-    <p>Share Test fix4</p>
-    <p>Share Test fix4</p>
-    <p>Share Test fix4</p>
-        <p>Share Test fix4</p>
-
-    <p>Share Test fix4</p>
-        <p>Share Test fix4</p>
-       <p>Share Test fix4</p>
-
-       <p>Share Test fix4</p>
-           <p>Share Test fix4</p>
-           <p>Share Test fix4</p>
-               <p>Share Test fix4</p>
-
-               <p>Share Test fix4</p>
-
-           <p>Share Test fix4</p>
-           <p>Share Test fix4</p>
-               <p>Share Test fix4</p>
-
-               <p>Share Test fix4</p>
+ 
     
-            <p>Share Test fix4</p>
-
-            <p>Share Test fix4</p>
-            <p>Share Test fix4</p>
-
-            <p>Share Test fix4</p>
-            <p>Share Test fix4</p>
-            <p>Share Test fix4</p>
-            <p>Share Test fix4</p>
-                <p>Share Test fix4</p>
+    <a href="https://kontist.onelink.me/C2RU/bc986a62?utm_source=google&utm_medium=sem&utm_campaign=conv_textads_all_gps_keywords_de_deutsch&utm_content=20190926&utm_term={keyword}&campaign_name={campaignid}&adset_name={adgroupid}&ad_name={creative}&ad_position={adposition}&placement={placement}">Link Test </a>
 
 
 
