--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 <body>
  
     
-    <a href="https://kontist.onelink.me/C2RU/bc986a62?utm_source=google&utm_medium=sem&utm_campaign=conv_textads_all_gps_keywords_de_deutsch&utm_content=20190926&utm_term={keyword}&campaign_name={campaignid}&adset_name={adgroupid}&ad_name={creative}&ad_position={adposition}&placement={placement}">Link Test </a>
+    <a href="https://www.google.ie/aclk?sa=l&ai=DChcSEwiivaXrqL_lAhUHsu0KHcdEAewYABABGgJkZw&ae=1&sig=AOD64_3JkCWvLBnkeNU5v-f3bB9gNQyIHQ&q&adurl=https://kontist.com/product/bank-account?gclid%3DEAIaIQobChMIor2l66i_5QIVB7LtCh3HRAHsEAAYASAAEgLKxvD_BwE&ved=2ahUKEwjGiKDrqL_lAhXGiVwKHYByCUgQ0Qx6BAgHEAE
+">Link Test </a>
 
 
 
