--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           var appIcon = "https://cdnappicons.appsflyer.com/id547702041.png";
           var loc = window.location;
           function redirect_to_web_store(loc) {
-              loc.href = web_store_link;
+              //loc.href = web_store_link;
           }
           function redirect(loc) {
               loc.href = store_link;
