--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               //loc.href = web_store_link;
           }
           function redirect(loc) {
-              loc.href = store_link;
+              //loc.href = store_link;
               if(fallback_url.startsWith("http")) {
                   setTimeout(function() {
                       loc.href = fallback_url;
