--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           }
       </script>
   </head>
-  <body onload="redirect(loc)">
+  <body>
       <div class="main">
           <div class="workarea">
               <div id="logo" class="logo">
