--- a/index.html
+++ b/index.html
@@ -1,87 +1,4 @@
 <html>
-  <head>
-      <link href="https://fonts.googleapis.com/css?family=Open+Sans:600" rel="stylesheet">
-  <style>
-    html,
-    body {
-      height: 100%;
-      width: 100%;
-    }
-
-    body {
-      background: #F5F6F8;
-      font-size: 16px;
-      font-family: 'Open Sans', sans-serif;
-      color: #2C3E51;
-    }
-
-    .main {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-    }
-
-    .main>div>div,
-    .main>div>span {
-      text-align: center;
-    }
-
-    .main span {
-      display: block;
-      padding: 80px 0 170px;
-      font-size: 3rem;
-    }
-
-    .main .app img {
-      width: 400px;
-    }
-  </style>
-      <script type="text/javascript">
-          var fallback_url = "null";
-          var store_link = "itms-apps://apps.apple.com/US/app/id547702041?ls=1&mt=8";
-          var web_store_link = "https://apps.apple.com/US/app/id547702041?mt=8";
-          var appIcon = "https://cdnappicons.appsflyer.com/id547702041.png";
-          var loc = window.location;
-          function redirect_to_web_store(loc) {
-              //loc.href = web_store_link;
-          }
-          function redirect(loc) {
-              //loc.href = store_link;
-              window.location.replace(store_link);
-              if(fallback_url.startsWith("http")) {
-                  setTimeout(function() {
-                      loc.href = fallback_url;
-                  }, 3500)
-              }
-          }
-      </script>
-  </head>
-  <body onLoad="redirect()">
-      <div class="main">
-          <div class="workarea">
-              <div id="logo" class="logo">
-              </div>
-              <span>Tinder</span>
-              <div class="app">
-                  <img src="https://cdn.appsflyer.com/af-statics/images/rta/app_store_badge.png" onclick="redirect_to_web_store(loc)"/>
-              </div>
-          </div>
-      </div>
-      <script type="text/javascript">
-          document.addEventListener('visibilitychange', function() {
-              if (window.history.length > 1) {
-                  window.history.go(-1); // go back to previous page
-              }
-          });
-          if (appIcon !== "null") {
-              var logoElement = document.getElementById("logo");
-              var imgElement = document.createElement("IMG");
-              imgElement.setAttribute("src", appIcon);
-              imgElement.setAttribute("style", "width:200px;height:200px;border-radius:20px;");
-              imgElement.setAttribute("onclick", "redirect_to_web_store(loc)");
-              logoElement.appendChild(imgElement);
-          }
-      </script>
-  </body>
+  <head></head>
+  <body></body>
 </html>
