--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
   <head></head>
-  <a href="https://parimatch.onelink.me/UDgO/COVID19Slider"></a>
-  <body></body>
+  <body>  <a href="https://parimatch.onelink.me/UDgO/COVID19Slider"></a>
+</body>
 </html>
