--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
-  <head></head>
-  <body>  <a href="https://parimatch.onelink.me/UDgO/COVID19Slider">test</a>
+  <head>
+  <meta property="og:title" content="Test preview" />
+  <meta property="og:image" content="https://cdn.pixabay.com/photo/2017/01/31/11/22/blank-photo-frames-2023679_960_720.png" />
+
+  </head>
+  <body>>test</a>
 </body>
 </html>
