--- a/index.html
+++ b/index.html
@@ -3,6 +3,25 @@
   <meta property="og:title" content="Test preview" />
   <meta property="og:image" content="https://cdn.pixabay.com/photo/2017/01/31/11/22/blank-photo-frames-2023679_960_720.png" />
 
+    
+    <!-- Snap Pixel Code -->
+    <script type='text/javascript'>
+    (function(e,t,n){if(e.snaptr)return;var a=e.snaptr=function()
+    {a.handleRequest?a.handleRequest.apply(a,arguments):a.queue.push(arguments)};
+    a.queue=[];var s='script';r=t.createElement(s);r.async=!0;
+    r.src=n;var u=t.getElementsByTagName(s)[0];
+    u.parentNode.insertBefore(r,u);})(window,document,
+    'https://sc-static.net/scevent.min.js');
+
+    snaptr('init', '839988bc-7509-4032-9074-78f73ed8caf9', {
+    'user_email': 'user@example.com'
+    });
+
+    snaptr('track', 'PAGE_VIEW');
+
+    </script>
+  <!-- End Snap Pixel Code -->
+    
   </head>
   <body>>test</a>
 </body>
