--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     'https://sc-static.net/scevent.min.js');
     
     snaptr('init', '839988bc-7509-4032-9074-78f73ed8caf9', {
-    'user_email': '__INSERT_USER_EMAIL__'
+    'user_email': 'mork@mork.co.jp'
     });
     
     snaptr('track', 'PAGE_VIEW');
