--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     'user_email': 'mork@mork.co.jp'
     });
     
-    snaptr('track', 'PAGE_VIEW');
+    snaptr('track', 'PAGE_VIEW', { "client_deduplication_id": "abc123"})
     
     </script>
     <!-- End Snap Pixel Code -->
