--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     'https://sc-static.net/scevent.min.js');
     
     snaptr('init', '839988bc-7509-4032-9074-78f73ed8caf9', {
-    'user_email': '__INSERT_USER_EMAIL__'
+    'hashed_user_email': 'd6e62e2c598e7f66483f3467d3515d4e6859e7083da18cee4b180f11370877c1'
     });
     
     snaptr('track', 'PAGE_VIEW');
