--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     'user_hashed_email': 'd6e62e2c598e7f66483f3467d3515d4e6859e7083da18cee4b180f11370877c1'
     });
     
-    //snaptr('track', 'PAGE_VIEW');
+    snaptr('track', 'PAGE_VIEW');
     
     </script>
     <!-- End Snap Pixel Code -->
