--- a/index.html
+++ b/index.html
@@ -2,23 +2,13 @@
 <html lang="en">
 <head>
 
-    <!-- Snap Pixel Code -->
-<script type='text/javascript'>
-(function(e,t,n){if(e.snaptr)return;var a=e.snaptr=function()
-{a.handleRequest?a.handleRequest.apply(a,arguments):a.queue.push(arguments)};
-a.queue=[];var s='script';r=t.createElement(s);r.async=!0;
-r.src=n;var u=t.getElementsByTagName(s)[0];
-u.parentNode.insertBefore(r,u);})(window,document,
-'https://sc-static.net/scevent.min.js');
-
-snaptr('init', 'd90fc4ef-502f-4455-a338-9c7819c7d902', {
-'user_email': 'mork@me.com'
-});
-
-snaptr('track', 'PAGE_VIEW', { "client_dedup_id": "abc123"});
-
-</script>
-<!-- End Snap Pixel Code -->
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-KZZ5RC7');</script>
+<!-- End Google Tag Manager -->
 
     
     <meta charset="UTF-8">
@@ -27,7 +17,10 @@ snaptr('track', 'PAGE_VIEW', { "client_dedup_id": "abc123"});
     <title>Document</title>
 </head>
 <body>
-
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KZZ5RC7"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
   <p>TEST</p>
     
 </body>
